welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:21: error: unclosed comment
/*
^max1020:1: error: Missing closing brace `}' assumed here
def max1020(a:Int, b:Int):Int =  {
^